changes to the cover photos

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-center intro">
           <div class="col-md-10" data-aos="fade-up">
-            <h1 id="homepage"><font color="#A9A9A9">Hi, I'm Simran!</font><br></br>As a designer, I want to be able to use technology to alleviate<br>societal problems. I aspire to bridge function <font color="#DAA520"> + </font> aesthetic using<br>my backgrounds in business <font color="#DAA520">+</font> design.</font> Currently, I'm looking for fulltime UX and Product Roles.<br><br>Learn more about my work below!</h1>
+            <h1 id="homepage"><font color="#A9A9A9">Hi, I'm Simran!</font><br></br>As a designer, I want to be able to use technology to alleviate<br>societal problems. I aspire to bridge function <font color="#DAA520"> + </font> aesthetic using<br>my backgrounds in business <font color="#DAA520">+</font> design.</font></h1>
             <a href="#work" class="go-down js-smoothscroll"></a>
           </div>
         </div>
