--- a/nasanew.html
+++ b/nasanew.html
@@ -46,7 +46,7 @@
     <!-- END templateux-navbar -->
     <section class="templateux-hero" data-scrollax-parent="true" id="constructionjunction">
       <div class="container">
-        <div class="row align-items-center justify-content-center intro">
+        <div class="row align-items-center justify-content-center">
           <!-- <div class="col-md-14" data-aos="fade-up" > -->
             <img src="images/NASA/NASA2.jpg" alt="Image placeholder" width="1280" height="750">
        <!--    </div> -->
