--- a/newlemon.html
+++ b/newlemon.html
@@ -46,7 +46,7 @@
     <!-- END templateux-navbar -->
     <section class="templateux-hero" data-scrollax-parent="true" id="constructionjunction">
       <div class="container">
-        <div class="row align-items-center justify-content-center intro">
+        <div class="row align-items-center justify-content-center">
           <!-- <div class="col-md-14" data-aos="fade-up" > -->
             <img src="images/lemon/coverphoto.png" alt="Image placeholder" width="1280" height="750">
        <!--    </div> -->
@@ -146,23 +146,21 @@
               <div class="col-md-12">
                 <br></br>
                 <p id="subheader">reverse assumptions</p>
-                <img  id="center" src="images/lemon/reverse.png" alt="Image placeholder" width="90%">
+                <img id="centering4" src="images/lemon/reverse.png" alt="Image placeholder" width="90%">
               </div>
               <div class="col-md-6">
                 <br></br>
                 <p id="subheader">restaurant interviews</p>
                 <p class="description1">We first started by trying to <b>reducing waste from a restaurant's perspective.</b> A lot of apps focus on trying to help <b>restaurants give away leftovers at the end of the day.</b> We spoke to buffets, fast food, fresh food, and sit-downs and <b>asked them about their waste/donation habits.</b></p>
+                <br></br>
+              </div>
+              <div class="col-md-12">
                 <img  src="images/lemon/restaurants.png" alt="Image placeholder" width="90%">
-                <br></br>
-              </div>
-              <div class="col-md-12">
-                <br>
-                <img  src="images/lemon/restint.png" alt="Image placeholder" width="90%">
               </div>
               <div class="col-md-12">
                 <br></br>
-                <p class="description1"><b>We found that minimizing waste for restaurants may prove difficult.</b></p>
-                <img src="images/lemon/insights2.png" alt="Image placeholder" width="60%">
+                <p class="description1"><b>We found that minimizing waste for restaurants may prove difficult.</b></p><br>
+                <img src="images/lemon/insights.png" id="centering3" alt="Image placeholder" width="60%">
               </div>
               <!--section 4-->
               <div class="col-md-6">
@@ -195,7 +193,7 @@
                 <br>
                 <img  src="images/lemon/codesign.png" alt="Image placeholder" width="100%"><br></br>
                 <p class="description1">We conducted <b>co-design sessions</b> revolving around an artifact - a plate of spoiled food. The goal was to <b>evoke sentiments</b> associated with the plate.  We interviewed 20 candidates and found that <b>80%</b> of candidates had some issue keeping track of food. We found that consumers <b>buy too much food, throw it away quickly, and pay little attention to waste.</b></p><br>
-                <img  src="images/lemon/insights2pl.png" id="numbers2" alt="Image placeholder" width="70%">
+                <img  src="images/lemon/insights2.png" id="numbers2" alt="Image placeholder" width="70%">
               </div>
               <div class="col-md-12">
                 <br></br>
