MANY CHANGES TO LEMON - making pics load faster

--- a/darpa2.html
+++ b/darpa2.html
@@ -45,7 +45,7 @@
     <!-- END templateux-navbar -->
     <section class="templateux-hero" data-scrollax-parent="true" id="constructionjunction">
       <div class="container">
-        <div class="row align-items-center justify-content-center intro">
+        <div class="row align-items-center justify-content-center">
           <!-- <div class="col-md-14" data-aos="fade-up" > -->
             <img src="images/DARPA/DARPA2.jpg" alt="Image placeholder" width="1286" height="750">
        <!--    </div> -->
