--- a/newlemon.html
+++ b/newlemon.html
@@ -129,7 +129,6 @@
                 <iframe width="600" height="470" id="moveit" src="https://www.youtube.com/embed/eXoqYQcqAIE?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <p class="description1">concept video</p>
               </div>
-
               <div class="col-md-12">
                 <hr id="pushdown">
               </div>
@@ -155,12 +154,12 @@
                 <br></br>
               </div>
               <div class="col-md-12">
-                <img  src="images/lemon/restaurants.png" alt="Image placeholder" width="90%">
+                <img  src="images/lemon/restaurants.png"  id="centering4" alt="Image placeholder" width="90%">
               </div>
               <div class="col-md-12">
                 <br></br>
                 <p class="description1"><b>We found that minimizing waste for restaurants may prove difficult.</b></p><br>
-                <img src="images/lemon/insights.png" id="centering3" alt="Image placeholder" width="60%">
+                <img src="images/lemon/insights.png" id="centering" alt="Image placeholder" width="60%">
               </div>
               <!--section 4-->
               <div class="col-md-6">
@@ -198,22 +197,22 @@
               <div class="col-md-12">
                 <br></br>
                 <p id="subheader">initial concept</p>
-                <p class="description1">Based on the initial insights, we created a paper prototype of an all encompassing platform, taking inspiration from the likes of Blue Apron and Hello Chef. Most people felt <b>the service was promising, but too all ecompassing/overwhelming.</b></p><br>
-                <img src="images/lemon/feedback.png"  id="numbers3" alt="Image placeholder" width="65%">
+                <p class="description1">Based on the initial insights, we created a paper prototype of an all encompassing platform, taking inspiration from the likes of Blue Apron and Hello Chef. Most people felt <b>the service was promising, but too all encompassing/overwhelming.</b></p><br>
+                <img src="images/lemon/feedback.png"  id="numbers3" alt="Image placeholder" width="55%">
               </div>
               <div class="col-md-12">
                 <br></br>
                 <p id="subheader">iteration</p>
                 <p class="description1">Based on in-class critiques from local professionals, we realized <b>the problem stems from users not understanding expiry dates or when food goes bad.</b> This is when the idea of <b>Lemon</b>, our new service, was born.</p><br>
-                  <img src="images/lemon/process2.png" id="numbers" alt="Image placeholder" width="80%"><br></br>
+                  <img src="images/lemon/process2.png" id="numbers" alt="Image placeholder" width="80%"><br></br><br>
                 <p id="subheader">storyboarding</p>
                 <p class="description1">We created storyboards and user tested them. The in-fridge smart camera was a huge privacy concern, while a <b>picture of the receipt</b> was the most well received.</p>
-                <img src="images/lemon/storyboard.png" alt="Image placeholder" width="100%"><br></br><br>
+                <img src="images/lemon/storyboard.png" alt="Image placeholder" width="100%"><br></br><br></br>
                 <p id="subheader">concept video storyboarding + production</p>
-                <img src="images/lemon/video.png" id="numbers" alt="Image placeholder" width="80%"><br></br>
+                <img src="images/lemon/video2.png" id="numbers" alt="Image placeholder" width="80%"><br></br><br></br>
                 <p id="subheader">logo + poster iterations</p>
-                <img src="images/lemon/logos.png" id="numbers" alt="Image placeholder" width="80%"><br></br>
-                <img src="images/lemon/posters.png" id="numbers" alt="Image placeholder" width="80%">
+                <img src="images/lemon/logos3.png" id="numbers" alt="Image placeholder" width="80%"><br></br>
+                <img src="images/lemon/posters2.png" id="numbers" alt="Image placeholder" width="80%">
               </div>
               <!--<div class="col-md-12" id="concept">
                 <br>
@@ -233,10 +232,11 @@
                     <p class="description1">Our team placed <b>third at the demo day pitch</b> where we presented to leaders in the Pittsburgh community! We pitched our idea as a <b>freemium model with a paid premium product.</b> We presented a pitch deck, video, and poster four times to a total of 20 investors. We received great advice on how to continue expanding our idea, starting with a pricing structure other than a freemium model. The investors <b>loved our branding</b> and how simple yet effective the idea was!</p>
                     <img id="shift" src="images/lemon/demoday.png" alt="Image placeholder" width="90%"><br></br>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-12">
                     <p id="subheader">business analysis</p>
-                    <img src="images/lemon/competitiveanalysis.png" alt="Image placeholder" width="80%">
+                    <img src="images/lemon/biz.png" id="centering2" alt="Image placeholder" width="80%">
               </div>
+              <!--
               <div class="col-md-6">
                     <img src="images/lemon/valueflow.png" id="onlinefacts" alt="Image placeholder" width="80%">
               </div>
@@ -246,7 +246,7 @@
               </div>
               <div class="col-md-6">
                   <img src="images/lemon/pog.png" alt="Image placeholder" width="80%">
-              </div>
+              </div>-->
               <div class="col-md-12">
                 <hr id="pushdown">
                 <br>
