--- a/tiles.html
+++ b/tiles.html
@@ -46,7 +46,7 @@
     <!-- END templateux-navbar -->
     <section class="templateux-hero" data-scrollax-parent="true" id="constructionjunction">
       <div class="container">
-        <div class="row align-items-center justify-content-center intro">
+        <div class="row align-items-center justify-content-center">
           <!-- <div class="col-md-14" data-aos="fade-up" > -->
             <img src="images/tiles/coverphoto.png" alt="Image placeholder" width="1286" height="750">
        <!--    </div> -->
@@ -85,18 +85,27 @@
               </div>
               <div class="col-md-8">
                 <span class=caption id="rowoverview">Project Overview</span>
-                <p class="description1"><b>Independent mobility remains a challenge experienced by people who are blind or visually impaired</b>as a person may reach a general area but may encounter difficulty or lack the information to get to a very specific destination.  Currently available navigation techniques (GPS, Bluetooth beacons, etc) are capable of supporting navigation to within 5m of a desired target, however, are <b>not capable of robust navigation and spatial tasks in the 2-3 meter range.</b> We frame this problem as the <b>"last meter problem".</b> Our approach to solving this is by using tactile surfaces or <b>textured ground surfaces</b> that one can sense through touch or by walking on them, perhaps in combination with some bluetooth/audio tool.</p>
+                <p class="description1"><b>Independent mobility remains a challenge experienced by people who are blind or visually impaired</b>as a person may reach a general area but may encounter difficulty or lack the information to get to a very specific destination.  Currently available navigation techniques (GPS, Bluetooth beacons, etc) are capable of supporting navigation to within 5m of a desired target, however, are <b>not capable of robust navigation and spatial tasks in the 2-3 meter range.</b></p>
               </div>
               <div class="col-md-8">
                 <span class=caption id="rowoverview">Impact</span>
-                <p class="description1">Create an interactive tactile tile that can be used to improve the 'last meter problem' that is experienced by the blind or visually impaired. The hope is that the tactile tiles can be sold in a kit and used as a low-cost method for solving this problem.</p>
+                <p class="description1"> We hope to improve navigation for blind or visually impaired persons through a low-cost, effective solution. Additionally, our team will be publishing a paper on our findings!</p>
+              </div>
+              <div class="col-md-12">
+                <hr id="pushdown">
               </div>
             </div>
           <!-- </div> -->
           <!-- <img src="images/CJ/breakline.jpg" id="break" width=1268> -->
             <div class="row mb-5">
               <div class="col-md-12">
-                <p id="rowoverview2">02 Problem Space</p>
+                <p id="rowoverview2">02 Current Stage</p>
+                <p class="description1"
+
+                Our approach to solving this is by using tactile surfaces or <b>textured ground surfaces</b> that one can sense through touch or by walking on them, perhaps in combination with some bluetooth/audio tool.
+
+
+                <p id="rowoverview2">03 Approach</p>
                  <p class="description1">Going into this project, I had limited knowledge of visually impaired or blind users. I tried to learn about common navigation problems, tactile pavers, and current technology that exists for the visually impaired. The hope was to be able to come up with some guiding questions and takeaways.</p>
                 <p class="text-center mb-4" id="questions"><img src="images/tiles/keyquestions.png" alt="Image placeholder" class="img-fluid" width="40%"></p>
               </div>
@@ -158,7 +167,7 @@
              </div>
 
              <div class="col-md-6">
-                <p id="rowoverview2">05 Next Steps + Reflection</p>
+                <p id="rowoverview2">04 Next Steps + Reflection</p>
                 <br>
                 <p class="description1">We are currently just ending the ideation phase for this project and starting the iteration phase. The next phase is to <b>try out different tile patterns, both those found outdoors and also custom patterns</b> in an attempt to find the right combination of something that's functional and meets the needs of solving the last meter problem. Then, we hope to gather results of the Twitter survey and conduct in person interviews while continuing to build out the technology. The final product would be some sort of <b>toolkit that we could hand-off so people can make interactive tiles within the buildings or outdoor spaces that they need them in.</b> <br></br><br></br>My experience with the accessibility team has been extremely rewarding. I learned about so <b>many prototyping tools and technologies</b> in such a short period of time. I really wanted to grow my ability to be "thrifty" and be able to mock something up quickly and comfortably, which I improved on considerably this semester. The hope in the next semester is that I continue to develop these skills as well as further develop the project with my UX knowledge, especially building a product that we could perhaps bring to market.
              </div>
@@ -166,7 +175,7 @@
                 <p class="text-center mb-4" id="questions"><img src="images/tiles/Option6.png" alt="Image placeholder" class="img-fluid" width="50%"></p>
               </div>
               <div class="col-md-6">
-                <p id="rowoverview2">07 Links</p>
+                <p id="rowoverview2">05 Links</p>
                 <p class="description1" id="link"><a href="images/tiles/lastmeter.pdf" style="color:black">Last Meter Workshop Paper</a></p>
               </div>
             </div>
