--- a/tiles.html
+++ b/tiles.html
@@ -54,7 +54,6 @@
       </div>
     </section>
     <!-- END templateux-hero -->
-
     <section class="templateux-portfolio-overlap mb-5" id="next">
       <div class="container" data-aos="fade-up">
         <div class="row justify-content-center">
@@ -89,7 +88,7 @@
               </div>
               <div class="col-md-8">
                 <span class=caption id="rowoverview">Impact</span>
-                <p class="description1"> We hope to improve navigation for blind or visually impaired persons through a low-cost, effective solution. Additionally, our team will be publishing a paper on our findings!</p>
+                <p class="description1"> We hope to <b>improve navigation</b> for blind or visually impaired persons through a low-cost, effective solution. Additionally, our team will be <b>publishing a paper</b> on our findings!</p>
               </div>
               <div class="col-md-12">
                 <hr id="pushdown">
@@ -100,10 +99,15 @@
             <div class="row mb-5">
               <div class="col-md-12">
                 <p id="rowoverview2">02 Current Stage</p>
-                <p class="description1"
+                <p class="description1">Our approach to solving this problem is by using tactile surfaces or <b>textured ground surfaces</b> that one can sense through touch or by walking on them, perhaps in combination with some bluetooth/audio tool. Currently, we have built a basic working prototype and are looking to test it with blind users through 1) an informal Twitter survey and a 2) formal in-person codesign session.</p>
 
-                Our approach to solving this is by using tactile surfaces or <b>textured ground surfaces</b> that one can sense through touch or by walking on them, perhaps in combination with some bluetooth/audio tool.
-
+                 <div class="col-md-12">
+                <p id="rowoverview2">04 User Research</p>
+                <p class="description1">
+                  With a working prototype, we resumed our iterative research process to get opinions from visually impaired users. Our plan was to first send out an <b>initial survey on Twitter</b> and then find users that we surveyed who may be interested in an in-person interview and prototype testing session. Currently we are in the process of getting IRB approval for the survey and hope to get the survey out in early January.
+                </p>
+                <p class="text-center mb-4" id="questions"><img src="images/tiles/questions.png" alt="Image placeholder" class="img-fluid" width="100%"></p>
+             </div>
 
                 <p id="rowoverview2">03 Approach</p>
                  <p class="description1">Going into this project, I had limited knowledge of visually impaired or blind users. I tried to learn about common navigation problems, tactile pavers, and current technology that exists for the visually impaired. The hope was to be able to come up with some guiding questions and takeaways.</p>
@@ -158,13 +162,8 @@
               <p class="text-center mb-4" id="ardprocess"><img src="images/tiles/ardprocess.png" alt="Image placeholder" class="img-fluid" width="80%"></p>
 
 
-              <div class="col-md-12">
-                <p id="rowoverview2">04 User Research</p>
-                <p class="description1">
-                  With a working prototype, we resumed our iterative research process to get opinions from visually impaired users. Our plan was to first send out an <b>initial survey on Twitter</b> and then find users that we surveyed who may be interested in an in-person interview and prototype testing session. Currently we are in the process of getting IRB approval for the survey and hope to get the survey out in early January.
-                </p>
-                <p class="text-center mb-4" id="questions"><img src="images/tiles/questions.png" alt="Image placeholder" class="img-fluid" width="100%"></p>
-             </div>
+
+
 
              <div class="col-md-6">
                 <p id="rowoverview2">04 Next Steps + Reflection</p>
