changes to tiles.html

--- a/tiles.html
+++ b/tiles.html
@@ -103,23 +103,26 @@
                 <img src="images/tiles/funny.png" alt="Image placeholder" class="img-fluid" width="100%">
               </div>
               <div class="col-md-12">
-                <br></div>
+                <br></br>
                 <p id="subheader"><b>user research</b></p>
                 <p class="description1">
-                  Currently, we have built a basic working prototype and are looking to test it with blind users through <b>1) an informal Twitter survey</b> and a 2) <b>formal codesign session. The survey has received IRB approval and is now in the process of being sent out on Twitter.</b></p>
-                <p class="text-center mb-4" id="questions"><img src="images/tiles/questions.png" alt="Image placeholder" class="img-fluid" width="100%"></p>
+                  Currently, we have built a basic working prototype and are looking to test it with blind users through:<br></br>&nbsp;&nbsp;&nbsp;<b>01</b> an informal Twitter survey<br><b>&nbsp;&nbsp;&nbsp;02</b> an formal codesign session<br></br>The survey has <b>received IRB approval</b> and is now in the process of being sent out on Twitter.</p><img id="centering4" src="images/tiles/questions.png" alt="Image placeholder" class="img-fluid" width="90%">
              </div>
-
+             <div class="col-md-12">
+                <hr id="pushdown">
+             </div>
+             <div class="col-md-12">
+                <br>
                 <p id="rowoverview2">03 Approach</p>
                  <p id="subheader"><b>problem space exploration</b></p>
                  <p class="description1">Going into this project, I had limited knowledge of visually impaired or blind users. I tried to learn about common navigation problems, tactile pavers, and current technology that exists for the visually impaired. The hope was to be able to come up with some guiding questions and takeaways.</p>
-                <p class="text-center mb-4" id="questions"><img src="images/tiles/keyquestions.png" alt="Image placeholder" class="img-fluid" width="40%"></p>
+                <p class="text-center mb-4" id="questions"><img src="images/tiles/keyquestions.png" alt="Image placeholder" class="img-fluid" width="60%"></p>
               </div>
               <br></br>
               <div class="col-md-12">
                 <br></br>
                 <p id="subheader"><b>prototyping</b></p>
-                  <p class="description1">Once we had a foundation, we started the 3D Fabrication process of building tiles. For the initial prototype, we wanted to build a generic tile that could be used to sense any kind of pressure. The goal was to 1) have something we could <b>use in future interviews with users to test our hypotheses</b> and 2) <b>integrate with some audio or haptic sensing information to provide feedback</b> to a visually impaired user. The fabrication process had a huge learning curve, particularly with machining and understanding what were the best materials to use.</p>
+                  <p class="description1">Once we had a foundation, we started the <b>3D fabrication process of building tiles.</b> For the initial prototype, we wanted to build a generic tile that could be used to sense any kind of pressure. The goal was to:<br></br><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;01</b> build something that could be uses in interviews with users<br><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;02</b> integrate with some audio or haptic sensing information</p>
               </div>
               <div class="col-md-12">
                   <p class="text-center mb-4" id="tactilequestions"><img src="images/tiles/fabrication.png" alt="Image placeholder" class="img-fluid" width="80%"></p>
@@ -127,19 +130,21 @@
               <div class="col-md-6">
                   <br>
                   <p id="subheader"><b>tile molds</b></p>
-                  <p class="description1">Creating a mold that we could use for prototyping was the first step. We originally tried to 3D print tiles using a makerbot, but due to the excessive time required, we switched over to a <b>CNC for tile production.</b> These tile molds were used to later mold the plastic and velostat for our initial prototype. </p>
+                  <p class="description1">Creating a <b>mold</b> that we could use for prototyping was the first step. We originally tried to 3D print tiles using a Makerbot, but due to the excessive time required, we switched over to a <b>CNC for tile production.</b> These tile molds were used to later mold the plastic and velostat for our initial prototype.</p>
               </div>
               <div class="col-md-6">
                   <p class="text-center mb-4" id="molds"><img src="images/tiles/molds.png" alt="Image placeholder" class="img-fluid" width="100%"></p>
               </div>
               <div class="col-md-6">
                 <p id="subheader"><b>materials experimentation</b></p>
-                  <p class="description1"> To mock up the initial tile, we wanted something that could take pressure and that someone could step on. Thus, we used a combination of <b>plastic and velostat - the plastic to withstand someone stepping on it and the velostat to be embedded underneath to sense pressure and eventually be paired with Arduino for data collection.</b> However, the process for finding the right plastic was tough - we starting with Polycarbonates and eventually invested in ABS plastic for the thermoforming. During thermoforming, or molding the plastic into the shape of the tile, the <b>Polycarbonate melted on the corners and had air bubbles under temperatures higher than 375 degrees F.</b> Additionally, we found out that our <b>heat source must be underneath</b> the plastic instead of on top, so that aided us in finding a solution.  We experimented with different materials,  melting points, and different heat sources to find the right combination of materials.
+                  <p class="description1"> We wanted something that could take pressure when stepped on. Thus, we used a combination of <b>plastic and velostat</b> - the plastic to withstand pressure and the velostat to sense pressure in partnership with an Arduino.<br></br><b>ABS plastic</b> and placing the heat source <b>under the plastic</b> worked best for us.</p>
               </div>
-              <p class="text-center mb-4" id="molds"><img src="images/tiles/melt.png" alt="Image placeholder" class="img-fluid" width="100%"></p>
-
+              <div class="col-md-6"></div>
+              <div class="col-md-12">
+                  <img src="images/tiles/melt.png" alt="Image placeholder" class="img-fluid" width="100%">
+              </div>
               <div class="col-md-6">
-                <br>
+                <br></br><br>
                 <p id="subheader"><b>vacuum forming</b></p>
                 <p class="description1">The material experimentation happened in sync with multiple vacuum forming attempts. <b>We originally used a traditional vacuum former in hopes that we could find a more low-cost alternative.</b> However, after several attempts we had to move on to a more advanced vacuum forming machine. Since this project is still ongoing, when we produce kits for people, the hope is that we can still find a different low-cost alternative as needed.</p>
               </div>
