changes to tiles.html

--- a/tiles.html
+++ b/tiles.html
@@ -146,13 +146,13 @@
               <div class="col-md-6">
                 <br></br><br>
                 <p id="subheader"><b>vacuum forming</b></p>
-                <p class="description1">The material experimentation happened in sync with multiple vacuum forming attempts. <b>We originally used a traditional vacuum former in hopes that we could find a more low-cost alternative.</b> However, after several attempts we had to move on to a more advanced vacuum forming machine. Since this project is still ongoing, when we produce kits for people, the hope is that we can still find a different low-cost alternative as needed.</p>
+                <p class="description1">We ended up using an advanced vaccum forming machine, although the hope is that we can still find a low-cost alternative for kits.</p>
               </div>
               <div class="col-md-6">
                 <p class="text-center mb-4" id="vac"><img src="images/tiles/vac.png" alt="Image placeholder" class="img-fluid" width="100%"></p>
               </div>
-
               <div class="col-md-12">
+                <br>
                 <p id="subheader"><b>arduino</b></p>
                 <p class="description1">Once we had a prototype with all the parts, we proceeded to integrate Arduino. The <b>purpose of the Arduino is to be able sense pressure - the potential pressure that would come from stepping on a tile or using a cane to press down on a tile.</b> We wanted to see what sort of data we could collect to better understand what sort of feedback we could give to someone who is visually impaired. We used copper tape to ensure conductivity between the two pieces. The next step is to integrate audio with the pressure sensing. You can see videos of the two separate parts to the right!
                 </p>
