--- a/tiles.html
+++ b/tiles.html
@@ -106,7 +106,9 @@
                 <br></br>
                 <p id="subheader"><b>user research</b></p>
                 <p class="description1">
-                  Currently, we have built a basic working prototype and are looking to test it with blind users through:<br></br>&nbsp;&nbsp;&nbsp;<b>01</b> an informal Twitter survey<br><b>&nbsp;&nbsp;&nbsp;02</b> an formal codesign session<br></br>The survey has <b>received IRB approval</b> and is now in the process of being sent out on Twitter.</p><img id="centering4" src="images/tiles/questions.png" alt="Image placeholder" class="img-fluid" width="90%">
+                  Currently, we have built a basic working prototype and are looking to test it with blind users through:<br></br>&nbsp;&nbsp;&nbsp;<b>01</b> an informal Twitter survey<br><b>&nbsp;&nbsp;&nbsp;02</b> a formal codesign session on tile patterns and uses<br></br>The survey has <b>received IRB approval</b> and is now in the process of being sent out on Twitter.</p>
+                  <img id="centering4" src="images/tiles/questions.png" alt="Image placeholder" class="img-fluid" width="90%"><br></br>
+                  <img src="images/tiles/Option5.png" alt="Image placeholder" id="numbers4"class="img-fluid" width="70%">
              </div>
              <div class="col-md-12">
                 <hr id="pushdown">
@@ -154,7 +156,7 @@
               <div class="col-md-12">
                 <br>
                 <p id="subheader"><b>arduino</b></p>
-                <p class="description1">Once we had a prototype with all the parts, we proceeded to integrate Arduino. The <b>purpose of the Arduino is to be able sense pressure - the potential pressure that would come from stepping on a tile or using a cane to press down on a tile.</b> We wanted to see what sort of data we could collect to better understand what sort of feedback we could give to someone who is visually impaired. We used copper tape to ensure conductivity between the two pieces. The next step is to integrate audio with the pressure sensing. You can see videos of the two separate parts to the right!
+                <p class="description1">The <b>purpose of the Arduino is to be able sense pressure - the potential pressure that would come from stepping on a tile or using a cane to press down on a tile.</b> We wanted to see what sort of data we could collect to better understand the feedback we could give to a user. We used copper tape to ensure conductivity between the two pieces. You can see videos of the two separate parts to the right!
                 </p>
               </div>
               <div  class="col-md-6">
@@ -165,24 +167,26 @@
                 <br>
                 <iframe width="500" height="255" src="https://www.youtube.com/embed/6xFkR6CYQa8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
-              <br>
-              <p class="text-center mb-4" id="ardprocess"><img src="images/tiles/ardprocess.png" alt="Image placeholder" class="img-fluid" width="80%"></p>
-
-
-
-
-
-             <div class="col-md-6">
+              <div class="col-md-12">
+                <br></br>
+                <p class="text-center mb-4" id="ardprocess"><img src="images/tiles/ardprocess.png" alt="Image placeholder" class="img-fluid" width="80%"></p>
+              </div>
+              <div class="col-md-12">
+                <hr id="pushdown">
+              </div>
+              <div class="col-md-12">
+                <br></br>
                 <p id="rowoverview2">04 Next Steps + Reflection</p>
                 <br>
-                <p class="description1">We are currently just ending the ideation phase for this project and starting the iteration phase. The next phase is to <b>try out different tile patterns, both those found outdoors and also custom patterns</b> in an attempt to find the right combination of something that's functional and meets the needs of solving the last meter problem. Then, we hope to gather results of the Twitter survey and conduct in person interviews while continuing to build out the technology. The final product would be some sort of <b>toolkit that we could hand-off so people can make interactive tiles within the buildings or outdoor spaces that they need them in.</b> <br></br><br></br>My experience with the accessibility team has been extremely rewarding. I learned about so <b>many prototyping tools and technologies</b> in such a short period of time. I really wanted to grow my ability to be "thrifty" and be able to mock something up quickly and comfortably, which I improved on considerably this semester. The hope in the next semester is that I continue to develop these skills as well as further develop the project with my UX knowledge, especially building a product that we could perhaps bring to market.
-             </div>
-              <div class="col-md-6">
-                <p class="text-center mb-4" id="questions"><img src="images/tiles/Option6.png" alt="Image placeholder" class="img-fluid" width="50%"></p>
+                <p class="description1">The next step is to <b>integrate audio and pressure sensing.</b> Then, we hope to gather results of the Twitter survey and conduct in person interviews while continuing to build out the technology. The final product would be some sort of <b>toolkit that we could hand-off so people can make interactive tiles within the buildings or outdoor spaces that they need them in.</b> <br></br>My experience with the accessibility team has been extremely rewarding. I learned about so <b>many prototyping tools and technologies</b> in such a short period of time.</p>
+              </div>
+              <div class="col-md-12">
+                <hr id="pushdown">
               </div>
               <div class="col-md-6">
+                <br>
                 <p id="rowoverview2">05 Links</p>
-                <p class="description1" id="link"><a href="images/tiles/lastmeter.pdf" style="color:black">Last Meter Workshop Paper</a></p>
+                <p class="description1" id="link"><a href="images/tiles/lastmeter.pdf"><font color="#DAA520">Last Meter Workshop Paper</font></a></p>
               </div>
             </div>
           </div>
@@ -195,7 +199,7 @@
             <p>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             <div class="container text-center">
-              <p align="left">Copyright 2018-2019 © Simran Jobanputra</p>
+              <p align="left">Copyright 2019-2020 © Simran Jobanputra</p>
             </div>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           </p>
