changes to miranda2.html

--- a/miranda.html
+++ b/miranda.html
@@ -86,11 +86,11 @@
               <br></br>
               <div class="col-md-8">
                 <span class=caption id="rowoverview">Project Overview</span>
-                <p class="description1">This project was part of my Beginner Interaction Design Studio. Teams were given the ability to select a domain from a shortlist.</p>
+                <p class="description1"></p>
               </div>
               <div class="col-md-8">
                 <span class=caption id="rowoverview">Problem Summary</span>
-                <p class="description1">Design a conversational user interface for the retail domain.</p>
+                <p class="description1">.</p>
               </div>
               <div class="col-md-8">
                 <span class=caption id="rowoverview">Impact</span>
@@ -99,17 +99,12 @@
           </div>
 <!--section 2-->
  <div class="row mb-5">
-              <div class="col-md-4" id="solution">
+              <div class="col-md-6" id="solution">
                 <p id="rowoverview2">02 Solution</p>
-                  <p class="description1">The convenience of <b>online shopping has stagnated the number of in-store shoppers</b>. Our goal was two-fold:<br></br>
-                  <ul class="description1">
-                  <li>to get more shoppers in stores</li><br>
-                  <li>to make the shopping experience more enjoyable</li>
-                  </ul></p>
+                  <p class="description1"></p>
               </div>
-              <div class="col-md-8">
-                  <img id="onlinefacts" src="images/miranda/onlineshopfacts.png" alt="Image placeholder" class="img-fluid" width="50%">
-              </div>
+              <div class="col-md-6">
+                                </div>
               <div class="col-md-4">
                   <br></br>
                   <p class="description1">Miranda is a <b>conversational user interface that reinvigorates the joy of in-store shopping by building an experience that elevates department stores.</b><br></br></p>
