changes to miranda2

--- a/miranda.html
+++ b/miranda.html
@@ -274,17 +274,14 @@
               <p class="description1">Video Creation</p>
               <img src="images/miranda/videocutting.png" alt="Image placeholder" class="img-fluid" width="85%">
             </div>
-
-
-
-
-                -final deliverables
-                -final video
-                -final cui features
-                -screenshots of the final model (link to the links section)
-                -videography
+            <div class="col-md-12">
+              <br></br><br>
                 <p id="rowoverview2">04 Reflection + Future Steps</p>
+            </div>
+            <div class="col-md-12">
                 <p id="rowoverview2">05 Links</p>
+                <p class="description1"><a href="https://docs.google.com/document/d/e/2PACX-1vTkune-RfnEO6HoFJkV7nNUKiunVeAIkpbsJU4A1hXyQKlMB02mTn5rD9EjoNj2ynZdXb7UFMRestem/pub"><font color=""Model Text</p>
+            </done>
 
 
 
