--- a/tiles.html
+++ b/tiles.html
@@ -176,7 +176,7 @@
               </div>
               <div class="col-md-12">
                 <br></br>
-                <p id="rowoverview2">04 Next Steps + Reflection</p>
+                <p id="rowoverview2">04 Reflection</p>
                 <br>
                 <p class="description1">The next step is to <b>integrate audio and pressure sensing.</b> Then, we hope to gather results of the Twitter survey and conduct in person interviews while continuing to build out the technology. The final product would be some sort of <b>toolkit that we could hand-off so people can make interactive tiles within the buildings or outdoor spaces that they need them in.</b> <br></br>My experience with the accessibility team has been extremely rewarding. I learned about so <b>many prototyping tools and technologies</b> in such a short period of time.</p>
               </div>
