--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </a>
           </div>
           <div class="col-md-6" data-aos="fade-up">
-            <a class="project animsition-link" href="miranda.html">
+            <a class="project animsition-link" href="miranda2.html">
               <figure>
                 <img src="images/miranda/Artboard.png" alt="Free Template" class="img-fluid">
               </figure>
