push final miranda 2 changes to git

--- a/miranda.html
+++ b/miranda.html
@@ -260,19 +260,12 @@
               <img src="images/miranda/modeling.png" alt="Image placeholder" class="img-fluid" width="85%">
             </div>
             <div class="col-md-6">
-              <br></br><br></br>
-              <p class="description1">Video Scripting</p>
-
+              <br></br>
+              <p class="description1">Video Scripting + Creation</p>
+              <img src="images/miranda/videocutting.png" alt="Image placeholder" class="img-fluid" width="85%">
             </div>
             <div class="col-md-6">
-              <br></br>
-              <img  id="companalysis3" src="images/miranda/scripting.png" alt="Image placeholder" class="img-fluid" width="85%">
-            </div>
-
-            <div class="col-md-12">
-              <br>
-              <p class="description1">Video Creation</p>
-              <img src="images/miranda/videocutting.png" alt="Image placeholder" class="img-fluid" width="85%">
+              <img src="images/miranda/scripting.png" alt="Image placeholder" class="img-fluid" width="100%">
             </div>
             <div class="col-md-12">
               <br></br><br>
