--- a/miranda2.html
+++ b/miranda2.html
@@ -244,38 +244,33 @@
               <p class="description1">Modeling Sessions & Dialogues</p>
               <img src="images/miranda/modeling.png" id="centering2" alt="Image placeholder" class="img-fluid" width="85%">
             </div>
-            <div class="col-md-6">
-              <br></br><br></br>
-              <p class="description1">Video Scripting</p>
-            </div>
-            <div class="col-md-6">
-              <br></br>
-              <img  id="companalysis3" src="images/miranda/scripting.png" alt="Image placeholder" class="img-fluid" width="85%">
-            </div>
             <div class="col-md-12">
               <br>
+              <p class="description1">Video Scripting</p>
+              <img id="centering3" src="images/miranda/scripting.png" alt="Image placeholder" class="img-fluid" width="65%">
+            </div>
+            <div class="col-md-12">
+              <br></br>
               <p class="description1">Video Creation</p>
               <img src="images/miranda/videocutting.png" id="centering4" alt="Image placeholder" class="img-fluid" width="85%">
             </div>
             <div class="col-md-12">
+              <hr id="pushdown">
+            </div>
+            <div class="col-md-12">
+              <br></br>
               <p id="rowoverview2">04 Reflection</p>
+              <p class="description1">This project was interesting because I worked with two masters students coming from <b>very different backgrounds.</b> It was rewarding to learn how they think and sort of meet them in the middle. Additionally, this project really kickstarted my interested in Conversation Design. I'm currently learning about Voiceflow, Dialogflow, and about voice agents in general for my Master's capstone. Although at the time, some of the content went over my head, I learned a lot about <b>modeling scenarios and backing up my ideas with market research.</b></p>
+            </div>
+            <div class="col-md-12">
+              <hr id="pushdown">
             </div>
             <div class="col-md-12">
               <p id="rowoverview2">05 Links</p>
               <p class="description1"><a href="https://docs.google.com/document/d/e/2PACX-1vTkune-RfnEO6HoFJkV7nNUKiunVeAIkpbsJU4A1hXyQKlMB02mTn5rD9EjoNj2ynZdXb7UFMRestem/pub"><font color="#DAA520">Model Text</font></a></p>
               <p class="description1"><a href="https://docs.google.com/document/d/e/2PACX-1vT9enJiNyGUzk9ygV7GGg_iNtplsKezgYgLEw3mnpftPADvxlyk2fsjxaGfJZZ1zFryfzgo-xMoqJRX/pub"><font color="#DAA520">CUI Features</font></a></p>
             </div>
-
           </div>
-
-
-
-
-
-
-
-
-
     <footer class="templateux-footer">
       <div class="container-fluid">
         <div class="row">
