changes to miranda and cj

--- a/miranda2.html
+++ b/miranda2.html
@@ -46,7 +46,7 @@
     <!-- END templateux-navbar -->
     <section class="templateux-hero" data-scrollax-parent="true" id="constructionjunction">
       <div class="container">
-        <div class="row align-items-center justify-content-center">
+        <div class="row align-items-center justify-content-center intro">
           <!-- <div class="col-md-14" data-aos="fade-up" > -->
             <img src="images/miranda/retail.png" alt="Image placeholder" width="1280" height="750">
        <!--    </div> -->
@@ -67,7 +67,7 @@
               </div>
               <div class="col-md-3">
                 <span class=caption>Time</span>
-                <p class="description1">3 Weeks, Fall 2017</p>
+                <p class="description1">3 Weeks, Fall 2018</p>
               </div>
               <div class="col-md-3">
                 <span class=caption>Tools</span>
