--- a/junctionjourney.html
+++ b/junctionjourney.html
@@ -61,15 +61,14 @@
           <!--intro section-->
           <div class="col-md-14">
             <p id="rowoverview2">01 Overview</p>
-            <p id="subheader">Quick Summary</p>
             <div class="row work-detail">
               <div class="col-md-3">
                 <span class=caption>Team</span>
-                <p class="description1">Andrew Wang, Julia Luo</p>
+                <p class="description1">Andrew Wang, <a href="https://julialuo.me/"><font color="#DAA520">Julia Luo</font></a></p>
               </div>
               <div class="col-md-3">
                 <span class=caption>Time</span>
-                <p class="description1">3 Weeks</p>
+                <p class="description1">3 Weeks, Fall 2018</p>
               </div>
               <div class="col-md-3">
                 <span class=caption>Tools</span>
@@ -86,48 +85,52 @@
               </div>
               <div class="col-md-8">
                 <span class=caption id="rowoverview">Project Overview</span>
-                <p class="description1">This project was part of my Advanced Interaction Design studio. Teams were <b>randomly assigned</b> to a local Pittsburgh company. My team was assigned <b>Construction Junction</b>, which is a large non-profit warehouse supplying surplus construction materials & appliances at reduced prices.</p>
+                <p class="description1">For my Interaction Design studio, teams were <b>randomly assigned</b> to a local Pittsburgh company. My team was assigned <b>Construction Junction</b>, which is a large non-profit warehouse supplying surplus construction materials & appliances at reduced prices.</p>
             <!--section 2-->
               </div>
-            </div>
-
-           <div class="row mb-5">
+              <div class="col-md-8">
+                <span class=caption id="rowoverview">Impact</span>
+                <p class="description1">We <b>presented our work</b> to the Construction Junction management and were able to <b>create some movement</b> into how they partner with the local Pittsburgh community!</p>
+            <!--section 2-->
+              </div>
               <div class="col-md-12">
+                <hr id="pushdown">
+              </div>
+          </div>
+           <div class="row mb-5">
+              <div class="col-md-6">
                 <p id="rowoverview2">02 Solution</p>
-                  <p class="description1">To address the knowledge gap in the community about Construction Junction's larger mission of promoting conservation and reuse, my team<br>and I came up with Junction Journey: a <b>mobile application</b> geared towards kids that uses gamification and learning science principles to create<br>a fun environment <b>for children to learn about sustainability and conservation.</b></p><br>
-
-                  <p class="description1"><b>Application Basics</b><br>
-                  01 Competition with other schools<br>
-                  02 Learning about furniture reuse through microinteractions<br>
-                  03 Raising awareness about reuse events/community events</p>
-                  <iframe width="500" height="300" src="https://www.youtube.com/embed/vEvVBsImm8A?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br></br>
-
-                  <p class="description1">Junction Journey would not only be training the next generation, but would<br>also be penetrating <b>a much larger audience in Pittsburgh: schools and<br>educators</b> - simply by their interaction with children on a daily basis.</p><br>
-                  <a href="junctionjourney.html#finalprototype"><img src="images/CJ/conceptbutton.png" alt="Image placeholder" width="30%"></a>
-             </div>
-             <!--section 3-->
-             <div class="col-md-6">
-                <br></br>
-                <p id="rowoverview2">03 Initial Research</p>
-                 <p class="description1">My team first tried to understand Construction Junction’s goals and business model to <b>figure out where the opportunity space lay</b>, looking at their mission and products, along with how they are involved with the community, since they are a non-profit organization. Upon initial analysis, we found that many community members refer to Construction as <b>the "junkyard".</b></p>
+                  <p class="description1">To address the knowledge gap in the community about Construction Junction's larger mission of promoting conservation and reuse, my team and I came up with Junction Journey: a <b>mobile application</b> geared towards kids that uses gamification and learning science principles to create a fun environment <b>for children to learn about sustainability and conservation.<br></br>Feel free to click around on our <a href="https://framer.cloud/ZIOOL/7"><font color="#DAA520">Framer</font></a> prototype!</b></p>
+              </div>
+              <div class="col-md-6">
+                  <br></br></br>
+                  <iframe width="600" height="400" src="https://www.youtube.com/embed/vEvVBsImm8A?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+              <div class="col-md-12">
+                  <br></br>
+                  <p class="description1">Junction Journey would not only be training the next generation, but would<br>also be penetrating <b>a much larger audience in Pittsburgh: schools and<br>educators</b> - simply by their interaction with children on a daily basis.</p>
+                  <p id="subheader"><b>key features</b></p>
+                  <img src="images/CJ/CJ2.png" alt="Image placeholder" class="img-fluid" width="80%">
+              </div>
+              <div class="col-md-12">
+                <hr id="pushdown">
+              </div>
+              <div class="col-md-6">
+                <p id="rowoverview2">03 Approach</p>
+                <p id="subheader"><b>understanding the business model</b></p>
+                <p class="description1">We took a look at Construction Junction’s goals and business model, their mission and products, and how they are involved with the community, since they are a non-profit organization. Upon initial analysis, we found that many community members refer to Construction as <b>the "junkyard".</b></p>
               </div>
               <div class="col-md-6">
                 <p class="text-center mb-4" id="push"><img src="images/CJ/whatis.png" alt="Image placeholder" class="img-fluid" width="120%"></p>
               </div>
-              <br>
               <div class="col-md-6">
                 <br>
-                <p id="subheader">Problem Discovery</p>
+                <p id="subheader"><b>problem discovery</b></p>
                   <p class="description1">After doing some analysis we realized that the <b>Construction Junction business model has a two-fold purpose:</b> buying and selling reused goods along with promoting reuse and recycling in the Pittsburgh community through facility tours and workshops.</p>
-                <p class="description1"> You can see this even by taking a quick look at their website- <b>more than half of the information is dedicated to this mission of reuse.</b></p>
+                <p class="description1"> You can see this even by taking a quick look at their website and social media - <b>more than half of the information is dedicated to this mission of reuse.</b></p>
               </div>
               <div class="col-md-12">
-                <img src="images/CJ/reuse.png" alt="Image placeholder" class="img-fluid" width="80%">
-              </div>
-              <div class="col-md-12">
-                <br>
-                <p class="description1">
-                To find areas of improvement in Construction Junction's two-part business model, we conducted a <b>comprehensive review of their social media channels, spoke with Construction Junction employees and shoppers, and also surveyed local community members</b> as to whether people even knew about Construction Junction.</p>
+                <img src="images/CJ/reuse.png" id="centering2" alt="Image placeholder" class="img-fluid" width="80%">
               </div>
               <div class="col-md-12">
                 <br>
@@ -207,7 +210,6 @@
 
 
 
-                <!-- <strong><a href="https://framer.cloud/ZIOOL" style="color:black">Click to View Final Prototype</a></strong> -->
 <!--
             <div class="row mb-5">
               <div class="col-md-6">
@@ -291,9 +293,21 @@
             <p class="text-center mb-5"><img src="images/CJ/opps.jpg" alt="Image placeholder" class="img-fluid" width="60%"></p>
 
         </div>
+      </div>-->
+      <div class="col-md-12">
+        <p id="rowoverview2">04 Reflection</p>
+        <p class="description1"> This project also had a personal impact on me - I learned a lot of high-fidelity tools, such as Framer. Additionally, this project was my first foray into visual design.</p>
+      </div>
+      <div class="col-md-12">
+        <hr
+      </div>
+      <div class="col-md-12">
+        <p id="rowoverview2">05 Links</p>
+        <p class="description1"><a href="https://docs.google.com/presentation/d/e/2PACX-1vS7wlbv9IaxUNZ-i3OKbMsOxJHTWtfF7EMOH4Z4Yzo6AQnum5rtcwPndSz_ufVgEHODqH5Ebt5AZYAw/pub?start=false&loop=false&delayms=3000">Process Book</a></p>
       </div>
 
--->
+
+
     <footer class="templateux-footer">
       <div class="container-fluid">
         <div class="row">
@@ -301,7 +315,7 @@
             <p>
 
             <div class="container text-center">
-              <p align="left" id="copyright">Copyright 2018-2019 © Simran Jobanputra</p>
+              <p align="left" id="copyright">Copyright 2019-2020 © Simran Jobanputra</p>
 
             </div>
 
